# logo

./: .gitignore  README.md
3d_print/: n39_logo_50mm_noRing.dxf
drafts/alex/: howto.txt
drafts/eriu/: netz39_logo_web_light.psd
drafts/salzkraftwerk/outtakes/: netz39-logo.18a.luft-land-wasser.xcf
eriu/: netz39_logo_web_light.eps  netz39_logo_web_light.idraw
flightTeam/: n39_flightBadge.scad  n39_flightBadge.stl  n39_logo_50mm.dxf
salzkraftwerk/: netz39-logo.since_2013-07-11.some-versions-2svg
salzkraftwerk/patterns_100x100px/: _.00_README
x16/: CMakeLists.txt
x16/src/: CMakeLists.txt  x16.c  x16.h  x16_build.h.in
